--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,19 @@ set(ALL_SRC_FILES ${SRC_FILES} ${SRC_FILES_IN_SRC})
 
 add_executable(${EXECUTABLE_NAME} ${ALL_SRC_FILES})
 
+set(INIH_DIR ${PROJECT_SOURCE_DIR}/external/inih)
+
+if(NOT EXISTS ${INIH_DIR})
+    message(STATUS "inih directory not found. Cloning into ${INIG_DIR}..")
+    execute_process(
+            COMMAND git clone https://github.com/benhoyt/inih.git ${INIH_DIR}
+            RESULT_VARIABLE GIT_CLONE_RESULT
+    )
+    if (NOT GIT_CLONE_RESULT EQUAL 0)
+        message(FATAL_ERROR "Failed to clone inih repository!")
+    endif ()
+endif ()
+
 add_library(inih STATIC ${PROJECT_SOURCE_DIR}/external/inih/ini.c)
 
 target_link_libraries(${EXECUTABLE_NAME} PRIVATE inih)
