Work in progress arg parsing and CLI commands

--- a/settings_example.ini
+++ b/settings_example.ini
@@ -6,7 +6,7 @@ tid=44782           ; Trainer ID
 [game]
 version=LG          ; LG or FR
 sub=10              ; 1.1 = 11 1.0 = 10
-language=English    ; English, EU, Japanese
+language=ENGLISH    ; ENGLISH, EU, Japanese
 
 [settings]
 audio=MONO          ; MONO or STEREO
